@@ -1,3 +1,6 @@
+6 June 2007
++ RFE #1690681 - Added permissions link on volume list view.
+
 Version 0.5.3
 ------------------------------------------------------------------------
 15 May 2007
